// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avro ts test Should convert %s successfully 1`] = `
"/* eslint-disable @typescript-eslint/no-namespace */

export type Address = MyNamespaceData.Address;

export namespace MyNamespaceData {
    export const AddressName = \\"my.namespace.data.Address\\";
    export interface Address {
        street: string;
        zipcode: string;
        country: string;
    }
}
"
`;

exports[`Avro ts test Should convert %s successfully 2`] = `
"/* eslint-disable @typescript-eslint/no-namespace */

import { MyNamespaceData as MyNamespaceDataAddress } from \\"./Address.avsc.external\\";

export type CreateUser = MyNamespaceMessages.CreateUser;

export namespace MyNamespaceMessages {
    export const CreateUserName = \\"my.namespace.messages.CreateUser\\";
    export interface CreateUser {
        userId: string;
        name: string;
        address: MyNamespaceDataAddress.Address;
    }
}
"
`;

exports[`Avro ts test Should convert %s successfully 3`] = `
"/* eslint-disable @typescript-eslint/no-namespace */

import { MyNamespaceMessages as MyNamespaceMessagesCreateUser } from \\"./CreateUser.avsc.external\\";

import { MyNamespaceMessages as MyNamespaceMessagesUpdateAddress } from \\"./UpdateAddress.avsc.external\\";

export type Message = MyNamespace.Message;

export namespace MyNamespace {
    export const MessageName = \\"my.namespace.Message\\";
    export interface Message {
        type: \\"CreateUser\\" | \\"UpdateAddress\\";
        /**
         * Default: null
         */
        CreateUser?: null | MyNamespaceMessagesCreateUser.CreateUser;
        /**
         * Default: null
         */
        UpdateAddress?: null | MyNamespaceMessagesUpdateAddress.UpdateAddress;
    }
}
"
`;

exports[`Avro ts test Should convert %s successfully 4`] = `
"/* eslint-disable @typescript-eslint/no-namespace */

import { MyNamespaceData as MyNamespaceDataAddress } from \\"./Address.avsc.external\\";

export type UpdateAddress = MyNamespaceMessages.UpdateAddress;

export namespace MyNamespaceMessages {
    export const UpdateAddressName = \\"my.namespace.messages.UpdateAddress\\";
    export interface UpdateAddress {
        userId: string;
        address: MyNamespaceDataAddress.Address;
    }
}
"
`;
